src-tauri/abilities-macro/tests/trybuild/transform_ability_imported_mutation_alias_fails.stderr
error: Transform abilities cannot call mutating services; detected: services::accounts::update_account_field
   --> tests/trybuild/transform_ability_imported_mutation_alias_fails.rs:230:10
    |
230 | async fn transform_alias_mutation(
    |          ^^^^^^^^^^^^^^^^^^^^^^^^
